# sbbdep

./: .gitignore  .hgignore  .hgsub  .hgsubstate  AUTHORS  CMakeLists.txt  CMakePresets.json  COPYING  README.md  README.txt  README_db.txt  TODO  TODO.txt  configureDebug.sh  configureLLVMDebug.sh  configureRelDebug.sh  configureRelease.sh  found_all.sql  found_in_ldpath.sql  found_in_rpath.sql  found_in_self.sql  mksrcdists.sh  sbbdep-completition  sbbdep.man
.github/workflows/: docs.yml
CMake/: setup_buildtype.cmake  setup_compiler.cmake  setup_doc.cmake  setup_sq3.cmake
a4cmk/: myMacros.cmake  myTestSetup.cmake  mya4sqlt3Setup.cmake  setup_sq3.cmake
docs/: examples.adoc  index.adoc  install.adoc  options.adoc  options_cache.adoc  options_misc.adoc  options_other.adoc  options_search.adoc  overview.adoc
include/sbbdep/: cache.hpp  cachecmds.hpp  cachedb.hpp  cachesql.hpp  depfilewriter.hpp  depwriter.hpp  dircontent.hpp  dynlinked.hpp  dynlinkedarch.hpp  dynlinkedinfo.hpp  dynlinkedinfolist.hpp  elffile.hpp  error.hpp  filemagic.hpp  ldconf.hpp  lddirs.hpp  lddmap.hpp  log.hpp  path.hpp  pathlist.hpp  pathname.hpp  pathnamelist.hpp  pathnameset.hpp  pathset.hpp  pkfab.hpp  pkg.hpp  pkgadmdir.hpp  pkgarchiv.hpp  pkgdestdir.hpp  pkgfile.hpp  pkgname.hpp  pkgonebinlib.hpp  pkoffile.hpp  singles.hpp  stringlist.hpp  stringset.hpp
include/sbbdep/utils/: backgroundjob.hpp  concurrentpeek.hpp
slackbuild/: create-pkg.sh  slack-desc
sql/: found_all.sql  found_as_link.sql  found_in_rpath.sql  self_provided.sql
src/: appargs.cpp  appargs.hpp  appcli.cpp  appcli.hpp  config.in  dummy.cpp  main.cpp
src/cli/: appargs.cpp  appargs.hpp  appcli.cpp  appcli.hpp  depfilewriter.cpp  depfilewriter.hpp  depwriter.cpp  depwriter.hpp  featurex.cpp  featurex.hpp  lookup.cpp  lookup.hpp  lookup_dependencies.cpp  lookup_dependencies.hpp  lookup_fileinpackages.cpp  lookup_fileinpackages.hpp  lookup_whoneeds.cpp  lookup_whoneeds.hpp  lookupfile.cpp  lookupfile.hpp  main.cpp  pkoffile.cpp  pkoffile.hpp  report.cpp  report.hpp  report_bdtree.cpp  report_lookup.cpp  report_require.cpp  report_sync.cpp  report_sync.hpp  report_utils.cpp  report_utils.hpp  report_whoneed.cpp  xdl.cpp  xdl.hpp  xdl_whoneed.cpp
src/sbbdep/: backgroundjob.hpp  cache.cpp  cachecmds.cpp  cachedb.cpp  cachesql.cpp  cachesql.hpp  conststr.hpp  depfilewriter.cpp  depwriter.cpp  dircontent.cpp  dynlinked.cpp  elffile.cpp  error.cpp  filemagic.cpp  ldconf.cpp  lddirs.cpp  lddmap.cpp  log.cpp  path.cpp  pathname.cpp  pkfab.cpp  pkg.cpp  pkgadmdir.cpp  pkgarchiv.cpp  pkgdestdir.cpp  pkgfile.cpp  pkgname.cpp  pkgonebinlib.cpp  pkoffile.cpp
src/tools/: ld_sim.cpp
templates/: TODO
tests/: CMakeLists.txt  a4testing.cpp  a4testing.hpp  cachestuff.cpp  cacheup1_2.cpp  findbinpath.cpp  main.cpp  pathtest.cpp  pknametest.cpp  replorig.cpp  sqnotes.sql  varadmdir.cpp
tests/quicktest/: CMakeLists.txt  quicktest.cpp
